exports[`test No theme: normal button 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Unaffected button
  </div>
</div></a>
"
`;

exports[`test Theme with deriving component: button (should be bordered with white background) 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text pe-button--borders secondary-button\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Bordered button
  </div>
</div></a>
"
`;

exports[`test Theme with style variables: FAB (should be red) 1`] = `
"<a tabindex=\"0\" class=\"pe-button--fab pe-button--raised red-fab\">
<div class=\"pe-button__content\">
  <div class=\"pe-shadow pe-shadow--animated\">
    <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
    <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
  </div>
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Theme with style variables: button (should be blue) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text blue-button\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Blue button
  </div>
</div></a>
"
`;

exports[`test Theme with style variables: button (should be red) 1`] = `
"<a tabindex=\"0\" class=\"pe-button pe-button--text red-button\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Red button
  </div>
</div></a>
"
`;

exports[`test Theme with style variables: icon (should be red) 1`] = `
"<div class=\"pe-icon pe-icon--regular red-icon\">
  <div class=\"pe-svg\">
    <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
    viewbox=\"0 0 24 24\">
      <path d=
      \"M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z\">
      </path>
    </svg>
  </div>
</div>
"
`;

exports[`test Theme with style variables: icon button (should have large padding) 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--icon large-icon-button\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Theme with style variables: list (should have blue borders) 1`] = `
"<div class=\"pe-list pe-list--borders blue-list\">
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Mike Eden
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Watch a game
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Theme with style variables: list tile (should have red titles) 1`] = `
"<div class=\"pe-list\">
  <div class=\"pe-list-tile pe-list-tile--subtitle red-list-tile\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle red-list-tile\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle red-list-tile\">
    <div class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Mike Eden
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Watch a game
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Theme with theme file (global primary color): FAB (should be orange) 1`] = `
"<a tabindex=\"0\" class=\"pe-button--fab pe-button--raised\">
<div class=\"pe-button__content\">
  <div class=\"pe-shadow pe-shadow--animated\">
    <div class=\"pe-shadow__bottom pe-shadow--z-1\"></div>
    <div class=\"pe-shadow__top pe-shadow--z-1\"></div>
  </div>
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button--icon__content\">
    <div class=\"pe-icon pe-icon--regular\">
      <div class=\"pe-svg\">
        <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=
        \"24\" viewbox=\"0 0 24 24\">
          <path d=
          \"M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z\">
          </path>
        </svg>
      </div>
    </div>
  </div>
</div></a>
"
`;

exports[`test Theme with theme file: button (should be purple) 1`] = `
"<a tabindex=\"0\" class=
\"pe-button pe-button--text my-button--primary\">
<div class=\"pe-button__content\">
  <div class=\"pe-ripple pe-ripple--constrained\">
    <div class=\"pe-ripple__mask\">
      <div class=\"pe-ripple__waves\"></div>
    </div>
  </div>
  <div class=\"pe-button__wash\"></div>
  <div class=\"pe-button__focus\"></div>
  <div class=\"pe-button__label\">
    Purple button
  </div>
</div></a>
"
`;

exports[`test Theme with theme file: icon (should have larger sizes) 1`] = `
"<div class=\"pe-icon pe-icon--small my-icon\">
  <div class=\"pe-svg\">
    <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
    viewbox=\"0 0 24 24\">
      <path d=
      \"M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z\">
      </path>
    </svg>
  </div>
</div>
<div class=\"pe-icon pe-icon--regular my-icon\">
  <div class=\"pe-svg\">
    <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
    viewbox=\"0 0 24 24\">
      <path d=
      \"M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z\">
      </path>
    </svg>
  </div>
</div>
<div class=\"pe-icon pe-icon--medium my-icon\">
  <div class=\"pe-svg\">
    <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
    viewbox=\"0 0 24 24\">
      <path d=
      \"M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z\">
      </path>
    </svg>
  </div>
</div>
<div class=\"pe-icon pe-icon--large my-icon\">
  <div class=\"pe-svg\">
    <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\" height=\"24\"
    viewbox=\"0 0 24 24\">
      <path d=
      \"M7.88 3.39L6.6 1.86 2 5.71l1.29 1.53 4.59-3.85zM22 5.72l-4.6-3.86-1.29 1.53 4.6 3.86L22 5.72zM12 4c-4.97 0-9 4.03-9 9s4.02 9 9 9c4.97 0 9-4.03 9-9s-4.03-9-9-9zm0 16c-3.87 0-7-3.13-7-7s3.13-7 7-7 7 3.13 7 7-3.13 7-7 7zm1-11h-2v3H8v2h3v3h2v-3h3v-2h-3V9z\">
      </path>
    </svg>
  </div>
</div>
"
`;
